them logic thao tac nhanh

--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -103,22 +103,25 @@
         <section class="Toigian">
             <h3>Thao tác nhanh</h3>
             <div class="Luachon">
-                <div class="Luachon-chucnang">
+                <a class="Luachon-chucnang">
                     <div class="icon green">✔</div>
                     <p>Xem điểm danh</p>
-                </div>
-                <div class="Luachon-chucnang">
+                </a>
+
+                <a class="Luachon-chucnang">
                     <div class="icon green">♡</div>
                     <p>Sức khỏe</p>
-                </div>
-                <div class="Luachon-chucnang">
+                </a>
+
+                <a class="Luachon-chucnang">
                     <div class="icon green">📘</div>
                     <p>Xem điểm</p>
-                </div>
-                <div class="Luachon-chucnang">
+                </a>
+
+                <a class="Luachon-chucnang">
                     <div class="icon blue">💬</div>
                     <p>Liên hệ GV</p>
-                </div>
+                </a>
             </div>
         </section>
         </section>
