Cập nhật chức năng sửa ghi chú sức khỏe, cải thiện logic và giao diện cho việc cập nhật thông tin sức khỏe học sinh.

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -405,7 +405,7 @@
 
             <div><span>Sức khỏe</span> <textarea style="resize: none;  " id="GhichuveTTSKSUA" placeholder="Ghi chú về tình trạng sức khỏe"></textarea></div>
 
-            <div  style="display: flex;;"><div><input checked type="radio" value="Bình thường" name="BuaAN" id="rdbtnBinhThuongSUA"><span>Bình thường</span> </div>
+            <div  style="display: flex;;"><div><input checked type="radio" value="Bình thường" name="BuaANSUA" id="rdbtnBinhThuongSUA"><span>Bình thường</span> </div>
                 <div><input type="radio" name="BuaANSUA" value="Dị Ứng" id="rdbtnDiUngSUA"><span>Dị Ứng</span></div>
                 <div><input type="radio" name="BuaANSUA" value="Chế độ ăn đặc biệt" id="rdbtnCĐBSUA"><span>Chế độ ăn đặc biệt</span></div>
             </div>
