them chuc nang QL lich hoc cho lop hoc

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -29,6 +29,7 @@
         <button class="menu-btn" data-target="student">Học sinh</button>
         <button class="menu-btn" data-target="class">Lớp học</button>
         <button class="menu-btn" data-target="teacher">Giáo viên</button>
+        <button class="menu-btn" data-target="schedule">Lịch học</button>
         <button class="menu-btn" data-target="event">Sự kiện</button>
         <button class="menu-btn" data-target="report">Báo cáo</button>
     </nav>
@@ -645,6 +646,24 @@
                     </tr>
                 </tbody>
             </table>
+        </section>
+        <section id="schedule" class="page">
+            <div class="schedule-header">
+                <h3>Quản lý lịch học</h3>
+                <span>Quản lý thời khóa biểu theo tuần cho từng lớp học</span>
+
+                <div class="schedule-actions">
+                    <h5>Chọn lớp: </h5>
+                    <select>
+                        <option>Tất cả các lớp</option>
+                        <option>1A</option>
+                        <option>2E</option>
+                    </select>
+                    <img src="..\img\lichhoc.png" alt="">
+                    <h4>3 tiết/tuần</h4>
+                    <button class="addschedule-btn"><i class="fa-solid fa-plus"></i>Thêm tiết học</button>
+                </div>
+            </div>
         </section>
         <section id="event" class="page">
             <div class="event-header">
