xong phan QL Lich Hoc

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -664,6 +664,123 @@
                     <button class="addschedule-btn"><i class="fa-solid fa-plus"></i>Thêm tiết học</button>
                 </div>
             </div>
+            <table class="schedule-table">
+                <thead>
+                    <tr>
+                        <th>Tiết</th>
+                        <th>Thứ 2</th>
+                        <th>Thứ 3</th>
+                        <th>Thứ 4</th>
+                        <th>Thứ 5</th>
+                        <th>Thứ 6</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Tiết 1<br><small>07:00 - 07:35</small></td>
+                        <td>
+                            <div class="schedule-lesson">
+                                <strong>Toán</strong>
+                                <div class="schedule-teacher">Nguyễn Văn A</div>
+                                <span class="badge schedule-room">P101</span>
+                                <div class="schedule-table-actions">
+                                    <button class="editschedule"><i class="fa-solid fa-pen-to-square"></i></button>
+                                    <button class="deleteschedule"><i class="fa-solid fa-trash-can"></i></button>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="schedule-lesson">
+                                <strong>Âm nhạc</strong>
+                                <div class="schedule-teacher">Lê Văn C</div>
+                                <span class="badge schedule-room">P201</span>
+                                <div class="schedule-table-actions">
+                                    <button class="editschedule"><i class="fa-solid fa-pen-to-square"></i></button>
+                                    <button class="deleteschedule"><i class="fa-solid fa-trash-can"></i></button>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="schedule-lesson">
+                                <strong>Tiếng Việt</strong>
+                                <div class="schedule-teacher">Trần Thị B</div>
+                                <span class="badge schedule-room">P101</span>
+                                <div class="schedule-table-actions">
+                                    <button class="editschedule"><i class="fa-solid fa-pen-to-square"></i></button>
+                                    <button class="deleteschedule"><i class="fa-solid fa-trash-can"></i></button>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="schedule-lesson">
+                                <strong>Tiếng Việt</strong>
+                                <div class="schedule-teacher">Trần Thị B</div>
+                                <span class="badge schedule-room">P101</span>
+                                <div class="schedule-table-actions">
+                                    <button class="editschedule"><i class="fa-solid fa-pen-to-square"></i></button>
+                                    <button class="deleteschedule"><i class="fa-solid fa-trash-can"></i></button>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="schedule-lesson">
+                                <strong>Tiếng Việt</strong>
+                                <div class="schedule-teacher">Trần Thị B</div>
+                                <span class="badge schedule-room">P101</span>
+                                <div class="schedule-table-actions">
+                                    <button class="editschedule"><i class="fa-solid fa-pen-to-square"></i></button>
+                                    <button class="deleteschedule"><i class="fa-solid fa-trash-can"></i></button>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>Tiết 2<br><small>07:40 - 08:15</small></td>
+                        <td>
+                            <div class="schedule-lesson">
+                                <strong>Tiếng Việt</strong>
+                                <div class="schedule-teacher">Trần Thị B</div>
+                                <span class="badge schedule-room">P101</span>
+                                <div class="schedule-table-actions">
+                                    <button class="editschedule"><i class="fa-solid fa-pen-to-square"></i></button>
+                                    <button class="deleteschedule"><i class="fa-solid fa-trash-can"></i></button>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="schedule-lesson">
+                                <strong>Tiếng Việt</strong>
+                                <div class="schedule-teacher">Trần Thị B</div>
+                                <span class="badge schedule-room">P101</span>
+                                <div class="schedule-table-actions">
+                                    <button class="editschedule"><i class="fa-solid fa-pen-to-square"></i></button>
+                                    <button class="deleteschedule"><i class="fa-solid fa-trash-can"></i></button>
+                                </div>
+                            </div>
+                        </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <td>Tiết 3<br><small>08:20 - 08:55</small></td>
+                        <td colspan="4"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Tiết 4<br><small>09:00 - 09:35</small></td>
+                        <td colspan="4"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Tiết 5<br><small>09:40 - 10:15</small></td>
+                        <td colspan="4"></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <section id="event" class="page">
             <div class="event-header">
