Cải thiện giao diện và logic cho phần hiển thị lớp dạy và hoạt động, bổ sung tính năng responsive cho các thiết bị khác nhau.

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -72,8 +72,8 @@
             </div>
         </div>
         <div id="LopDay">
-            <h3>Các lớp đang dạy</h3>
-            <h3  style="color: gray;">Danh sách lớp và thông tin tổng quan</h3>
+            <h3>Các lớp đang dạy</h3><br>
+            <h3 id="spanan"  style="color: gray;">Danh sách lớp và thông tin tổng quan</h3>
             <div class="LOP"id="Lop1">
                 <h3 style="display: flex;justify-content: space-between;margin-right: 10px;"><span>6A</span><span style="background-color: black;color:white;border-radius: 15px;padding: 5px;">Chủ nhiệm</span></h3>
                 <p style="color: gray;">TMôn: Toán</p>
@@ -106,14 +106,14 @@
             <div class="HOATDONGGAN" id="HD2">
                 <h3 style="display: flex;justify-content: space-between;margin-right: 10px;margin-bottom: 0px;">
                     <span>Phụ huynh Nguyễn Thị B gửi tin nhắn về học sinh Nguyễn Văn A</span>
-                    <span style="background-color: white;color:black;border-radius: 15px;padding: 5px;">Tin nhắn</span>
+                    <span style="background-color: white;color:black;border: 1px solid black;border-radius: 15px;padding: 5px;">Tin nhắn</span>
                 </H3>
                 <span style="color: gray;">1 giờ trước</span>
             </div>
             <div class="HOATDONGGAN" id="HD3">
                 <h3 style="display: flex;justify-content: space-between;margin-right: 10px;margin-bottom: 0px;">
                     <span>Cập nhật điểm kiểm tra 15 phút lớp 7A</span>
-                    <span style="background-color: gray;color:black;border-radius: 15px;padding: 5px;">Điểm danh</span>
+                    <span style="background-color: gray;text-align: center;color:black;border-radius: 15px;padding: 5px;">Điểm số</span>
                 </H3>
                 <span style="color: gray;">2 giờ trước</span>
             </div>
