Cập nhật giao diện điểm danh học sinh, thêm ID cho tiêu đề và điều chỉnh kiểu ảnh.

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -121,7 +121,7 @@
     </div>
 <!-----------------Diem Danh------------------->
     <div id="DieDanh" style="display: none;">
-        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="../img/user (1).png" alt=""><span></span>Điểm danh học sinh</h3>
+        <h3 id="anhdd" style="margin-bottom: 2px;"><img   src="../img/user (1).png" alt=""><span></span>Điểm danh học sinh</h3>
         <span style="color: gray;">Ghi nhận tình hình chuyên cần hàng ngày</span>
         <div id="ChonLop">
             <div id="Lop">
