Cải thiện giao diện và logic cho phần điểm danh và sức khỏe, bổ sung tính năng cho nút ghi chú và điều chỉnh kiểu ảnh.

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -313,7 +313,7 @@
                         <span id="TenHS">Nguyễn Văn G</span>
                     </td>
                     <td>
-                        <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-check"></i></button>
+                        <button class="btnDDComat" style="height:100%;width: 15%;border-radius: 5px;align-items: center;"><i class="fa-solid fa-circle-check"></i></button>
                         <button class="btnDDVangMat" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-circle-xmark"></i></button>
                         <button class="btnDDDiMuon" style="height:100%;width: 15%;border-radius: 5px;"><i class="fa-solid fa-clock"></i></button>
                     </td>
@@ -321,7 +321,7 @@
                         <span id="GhiChuTTDD">-</span>
                     </td>
                     <td>
-                        <span id="GhiCHuDD" style="color: gray;">(Không quá 25 từ)</span>
+                        <span id="GhiCHuDD" >(Không quá 25 từ)</span>
                         <button class="btnGHICHUDD" >Ghi chú</button>
                     </td>
                 </tr>
@@ -340,7 +340,7 @@
     </div>
 <!-----------------SỨC KHỎE------------------->
     <div id="SucKhoe" style="display: none;">
-        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="../img/heart.png" alt=""><span></span>Quản lý sức khỏe và dinh dưỡng</h3>
+        <h3 id="anhSK" style="margin-bottom: 2px;"><img  src="../img/heart.png" alt=""><span></span>Quản lý sức khỏe và dinh dưỡng</h3>
         <span style="color: gray;">Ghi chú tình hình sức khỏe và chế độ ăn học sinh</span>
         <div id="ChonLopSK">
             <div id="LopSK">
