--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -489,7 +489,7 @@
     
 <!------------------Điểm số------------------>
     <div id="DiemSo" style="display: none;">
-        <h3 style="margin-bottom: 2px;"><img style="width: 1.5%;width: 1.5%;margin-right: 20px;" src="../img/open-book.png" alt=""><span></span>Quản lý điểm số</h3>
+        <h3 id="anhds" style="margin-bottom: 2px;"><img  src="../img/open-book.png" alt=""><span></span>Quản lý điểm số</h3>
         <span style="color: gray;">Nhập điểm, nhận xét và tạo phiếu điểm học sinh</span>
 
         <div id="ChonLopDS">
@@ -523,27 +523,27 @@
 
          <div id="TSDiemSo">
             <div id="TQDS" style="background-color: #F5F9FF;">
-                <span id="TongdiemTSDS" style="font-weight: bold;font-size: 60pt;color: blue;">1</span><br>
+                <span id="TongdiemTSDS" style="color: blue;">1</span><br>
                 <span style="color: blue;">Tổng điểm</span>
             </div>
             <div id="DTBDS" style="background-color:#D8F6E0;">
-                <span id="DiemTBTSDS" style="font-weight: bold;font-size: 60pt;color: green;">8.5</span><br>
+                <span id="DiemTBTSDS" style="color: green;">8.5</span><br>
                 <span style="color: green;">ĐTB</span>
             </div>
             <div id="GioiDS" style="background-color:#D8F6E0;">
-                <span id="GioiTSDS" style="font-weight: bold;font-size: 60pt;color: green;">1</span><br>
+                <span id="GioiTSDS" style="color: green;">1</span><br>
                 <span style="color: green;">Giỏi (≥8)</span>
             </div>
             <div id="KhaDS" style="background-color: #F5F9FF;">
-                <span id="KhaTSDS" style="font-weight: bold;font-size: 60pt;color: blue;">0</span><br>
+                <span id="KhaTSDS" style="color: blue;">0</span><br>
                 <span style="color: blue;">Khá (6.5-8)</span>
             </div>
             <div id="TBDS" style="background-color:#FFEBD2;">
-                <span id="TrungBinhTSDS" style="font-weight: bold;font-size: 60pt;color: orange;">0</span><br>
+                <span id="TrungBinhTSDS" style="color: orange;">0</span><br>
                 <span style="color: orange;">TB (5-6.5)</span>
             </div>
             <div id="YeuDS" style="background-color:#FFEBD2;">
-               <span id="YeuTSDS" style="font-weight: bold;font-size: 60pt;color: red;">0</span><br>
+               <span id="YeuTSDS" style="color: red;">0</span><br>
                 <span style="color: red;">Yếu (0-4.9)</span>
             </div>
         </div>
