Cập nhật giao diện chấm điểm và điều chỉnh vị trí các nút ghi chú thành cố định

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -64,11 +64,11 @@
                 <p>Học sinh đến muộn</p>
             </div>
             <div id="ChoChamDiem">
-                <h4>Chờ chấm điểm
+                <h4>Chấm điểm
                     <img src="../img/page.png" alt="anh">
                 </h4>
-                <h2>2</h2>
-                <p>Bài thi cần chấm</p>
+                <h2>1</h2>
+                <p>Bài thi đã chấm</p>
             </div>
         </div>
         <div id="LopDay">
