--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -700,6 +700,8 @@
                             <option>Tiết 1 (07:00 - 07:35)</option>
                             <option>Tiết 2 (07:40 - 08:15)</option>
                             <option>Tiết 3 (08:20 - 08:55)</option>
+                            <option>Tiết 4 (09:00 - 09:35)</option>
+                            <option>Tiết 5 (09:40 - 10:15)</option>
                         </select>
                     </div>
 
@@ -762,6 +764,8 @@
                             <option>Tiết 1 (07:00 - 07:35)</option>
                             <option>Tiết 2 (07:40 - 08:15)</option>
                             <option>Tiết 3 (08:20 - 08:55)</option>
+                            <option>Tiết 4 (09:00 - 09:35)</option>
+                            <option>Tiết 5 (09:40 - 10:15)</option>
                         </select>
                     </div>
 
@@ -892,17 +896,26 @@
 
                     <tr>
                         <td>Tiết 3<br><small>08:20 - 08:55</small></td>
-                        <td colspan="4"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td>Tiết 4<br><small>09:00 - 09:35</small></td>
-                        <td colspan="4"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td>Tiết 5<br><small>09:40 - 10:15</small></td>
-                        <td colspan="4"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                     </tr>
                 </tbody>
