Cải thiện kiểu dáng cho phần thông tin liên lạc, thêm viền và bo góc cho nhãn "Mẹ"

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -874,7 +874,7 @@
                 <div>
                     <span style="font-size: 14pt; font-weight: bold;display: flex; height: 20%;">
                     <div> Nguyễn Thị B
-                      <span>Mẹ</span>
+                      <span style="padding: 3px;border: 1px solid;border-radius: 10px;">Mẹ</span>
                     </div> 
                     </span>
                     <p style="font-size: 13pt;">Học sinh: Nguyễn Văn A</p>
