--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -831,49 +831,58 @@
          </div>
 
           <!-----------------Danh bạ------------------->
-         <div id="DanhBaLL" style="display: none;">
-            <div id="DabaLL" style="display: block;">
-            <span style="font-size: large;font-weight: bold;">Tin nhắn đến</span>
+         <div id="DanhBaLL">
+        <div id="DabaLL">
+        <span class="title">Tin nhắn đến</span>
 
-            <div class="DBaLL" id="DanhBaLL.1" style="align-items: center;display: flex; margin-top: 20px;justify-content: space-between;  box-shadow: 0 2px 5px rgba(0,0,0,0.1);; height: 23%;padding: 10px;border-radius: 7px;">
-                <div>
-                    <span style="font-size: 14pt; font-weight: bold;display: flex; height: 20%;">
+        <div class="DBaLL" id="DanhBaLL.1">
+            <div>
+                <span class="ten">
                     <div> Nguyễn Thị B
-                      <span style="padding: 3px;border: 1px solid;border-radius: 10px;">Mẹ</span>
-                    </div> 
-                    </span>
-                    <p style="font-size: 13pt;">Học sinh: Nguyễn Văn A</p>
-                    <span style="font-size: 13pt;"><i class="fa-solid fa-phone"></i>0123456789
-                     <i class="fa-solid fa-envelope"></i> nguyenthib@email.com</span>
-                </div>
-                <div>
-                    <button style="cursor: pointer;height: 20%;background-color: white;border-radius: 7px;">Chuyên cần</button>
-                    <button style="cursor: pointer;height: 20%;background-color: white;border-radius: 7px;"></i>Điểm số</button>
-                    <button style="cursor: pointer;height: 20%;background-color: white;border-radius: 7px;"><i class="fa-solid fa-paper-plane"></i></button>
-                </div>
+                        <span class="loai">Mẹ</span>
+                    </div>
+                </span>
+                <p class="hocSinh">Học sinh: Nguyễn Văn A</p>
+                <span class="lienHe">
+                    <i class="fa-solid fa-phone"></i>0123456789
+                    <i class="fa-solid fa-envelope"></i> nguyenthib@email.com
+                </span>
             </div>
-            <div class="DBaLL" id="DanhBaLL.2" style="align-items: center;display: flex; margin-top: 20px;justify-content: space-between;  box-shadow: 0 2px 5px rgba(0,0,0,0.1);; height: 23%;padding: 10px;border-radius: 7px;">
-                <div>
-                    <span style="font-size: 14pt; font-weight: bold;display: flex; height: 20%;">
+
+            <div>
+                <button class="btn">Chuyên cần</button>
+                <button class="btn">Điểm số</button>
+                <button class="btn"><i class="fa-solid fa-paper-plane"></i></button>
+            </div>
+        </div>
+
+        <div class="DBaLL" id="DanhBaLL.2">
+            <div>
+                <span class="ten">
                     <div> Nguyễn Thị B
-                      <span style="padding: 3px;border: 1px solid;border-radius: 10px;">Mẹ</span>
-                    </div> 
-                    </span>
-                    <p style="font-size: 13pt;">Học sinh: Nguyễn Văn A</p>
-                    <span style="font-size: 13pt;"><i class="fa-solid fa-phone"></i>0123456789
-                     <i class="fa-solid fa-envelope"></i> nguyenthib@email.com</span>
+                        <span class="loai">Mẹ</span>
+                    </div>
+                </span>
+                <p class="hocSinh">Học sinh: Nguyễn Văn A</p>
+                <span class="lienHe">
+                    <i class="fa-solid fa-phone"></i>0123456789
+                    <i class="fa-solid fa-envelope"></i> nguyenthib@email.com
+                </span>
+            </div>
+
+            <div>
+                <button class="btn">Chuyên cần</button>
+                <button class="btn">Điểm số</button>
+                <button class="btn"><i class="fa-solid fa-paper-plane"></i></button>
+            </div>
+            </div>
+            </div>
                 </div>
-                <div>
-                    <button style="cursor: pointer;height: 20%;background-color: white;border-radius: 7px;">Chuyên cần</button>
-                    <button style="cursor: pointer;height: 20%;background-color: white;border-radius: 7px;"></i>Điểm số</button>
-                    <button style="cursor: pointer;height: 20%;background-color: white;border-radius: 7px;"><i class="fa-solid fa-paper-plane"></i></button>
-                </div> 
             </div>
         </div>
     </div>
-    </div>
      <!------------------------Lịch dạy----------------------->
-<div id="LichDay" style="display: none;">
+    <div id="LichDay" style="display: none;">
         <h3 id="anhLD" style="margin-bottom: 2px;"><img  src="../img/schedule.png" alt=""><span></span>Theo dõi lịch giảng dạy</h3>
         <span style="color: gray;">Ghi chú về lịch giảng dạy của giáo viên</span>
         <div id="ChonTGLich">
