sua lai DS mon hoc

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -503,10 +503,19 @@
                         <label>Môn dạy</label>
                         <select id="teacherSubject">
                             <option>Chọn môn dạy</option>
+                            <option>Tiếng Việt</option>
                             <option>Toán</option>
-                            <option>Ngữ văn</option>
-                            <option>Tiếng Anh</option>
+                            <option>Đạo đức</option>
+                            <option>Tự nhiên và Xã hội</option>
+                            <option>Khoa học</option>
                             <option>Lịch sử</option>
+                            <option>Địa lí</option>
+                            <option>Tin học và Công nghệ</option>
+                            <option>Âm nhạc</option>
+                            <option>Mĩ thuật</option>
+                            <option>Giáo dục Thể chất</option>
+                            <option>Hoạt động trải nghiệm</option>
+                            <option>Tiếng Anh</option>
                         </select>
                     </div>
 
@@ -559,10 +568,19 @@
                         <label>Môn dạy</label>
                         <select id="teacherSubjectUpdate">
                             <option>Chọn môn dạy</option>
+                            <option>Tiếng Việt</option>
                             <option>Toán</option>
-                            <option>Ngữ văn</option>
-                            <option>Tiếng Anh</option>
+                            <option>Đạo đức</option>
+                            <option>Tự nhiên và Xã hội</option>
+                            <option>Khoa học</option>
                             <option>Lịch sử</option>
+                            <option>Địa lí</option>
+                            <option>Tin học và Công nghệ</option>
+                            <option>Âm nhạc</option>
+                            <option>Mĩ thuật</option>
+                            <option>Giáo dục Thể chất</option>
+                            <option>Hoạt động trải nghiệm</option>
+                            <option>Tiếng Anh</option>
                         </select>
                     </div>
 
@@ -709,8 +727,18 @@
                         <label>Môn học</label>
                         <select id="schedule-subject">
                             <option>Chọn môn học</option>
+                            <option>Tiếng Việt</option>
                             <option>Toán</option>
-                            <option>Ngữ Văn</option>
+                            <option>Đạo đức</option>
+                            <option>Tự nhiên và Xã hội</option>
+                            <option>Khoa học</option>
+                            <option>Lịch sử</option>
+                            <option>Địa lí</option>
+                            <option>Tin học và Công nghệ</option>
+                            <option>Âm nhạc</option>
+                            <option>Mĩ thuật</option>
+                            <option>Giáo dục Thể chất</option>
+                            <option>Hoạt động trải nghiệm</option>
                             <option>Tiếng Anh</option>
                         </select>
                     </div>
@@ -773,8 +801,18 @@
                         <label>Môn học</label>
                         <select id="schedule-subjectUpdate">
                             <option>Chọn môn học</option>
+                            <option>Tiếng Việt</option>
                             <option>Toán</option>
-                            <option>Ngữ Văn</option>
+                            <option>Đạo đức</option>
+                            <option>Tự nhiên và Xã hội</option>
+                            <option>Khoa học</option>
+                            <option>Lịch sử</option>
+                            <option>Địa lí</option>
+                            <option>Tin học và Công nghệ</option>
+                            <option>Âm nhạc</option>
+                            <option>Mĩ thuật</option>
+                            <option>Giáo dục Thể chất</option>
+                            <option>Hoạt động trải nghiệm</option>
                             <option>Tiếng Anh</option>
                         </select>
                     </div>
